Refactor and cleanup. And adding IP filtering feature. More to come...